@@ -21,6 +21,7 @@
     * Fix some naiming problems with the cursor lib
     * Fix odbcinst problems on systems without pwd.h
     * Change lib version to 2 to reflect SQLLEN changes in v2.3
+    * Fix threading problem (thanks Hristo)
 
 20th-April-2010
 2.3.0
